# cosilico-engine

./: .gitignore  Cargo.toml  README.md  SESSION.md  benchmark_results.txt  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml
benchmarks/: amt_speed_benchmark.py  ctc_speed_benchmark.py  eitc_speed_benchmark.py  salt_speed_benchmark.py  standard_deduction_speed_benchmark.py  tax_brackets_benchmark.py
docs/: DESIGN.md  DSL.md  PARAMETER_SYNTAX.md  PITCH.md  _toc.yml  intro.md
docs/ai-encoding/: overview.md
docs/architecture/: statute-organization.md
examples/: compile_to_rust.py  score_reform.py  score_reform_rust.py  uk_tax_benefit.rac
paper/: _config.yml  _toc.yml  conclusion.md  discussion.md  index.md  methods.md  preregistration.md  results.md
paper/_build/html/: abstract.json  appendix-code.json  appendix-provisions.json  conclusion.json  discussion.json  index.html  index.json  introduction.json  methods.json  myst.xref.json  preregistration.json  results.json  sitemap.xml
paper/_build/html/abstract/: index.html
paper/_build/html/appendix-code/: index.html
paper/_build/html/appendix-provisions/: index.html
paper/_build/html/conclusion/: index.html
paper/_build/html/discussion/: index.html
paper/_build/html/introduction/: index.html
paper/_build/html/methods/: index.html
paper/_build/html/preregistration/: index.html
paper/_build/html/results/: index.html
paper/_build/logs/: myst.build.json
paper/_build/site/: config.json  myst.search.json  myst.xref.json  objects.inv
paper/data/runs/: experiment_20251206_193620.json
src/: lib.rs
src/cosilico/: agent.py  dependency_resolver.py  dsl_agent.py  dsl_executor.py  dsl_parser.py  eitc_full_test.py  microsim.py  py_generator.py  vectorized_executor.py
src/cosilico/parameters/: loader.py
src/cosilico/validation/: __init__.py  consistency.py  literals.py  reference.py
src/rac/: __init__.py  executor.py  native.py
statute/26/24/b/1/: amounts.yaml
tests/: test_agi.py  test_amt_e2e.py  test_bracket_functions.py  test_cross_compilation.py  test_ctc_e2e.py  test_dependency_resolver.py  test_dsl_parser.py  test_eitc_e2e.py  test_js_generator.py  test_microsim.py  test_numeric_literal_validation.py  test_override_resolver.py  test_parameter_loader.py  test_py_generator.py  test_rac.py  test_rac_format.py  test_reward.py  test_salt_e2e.py  test_standard_deduction_e2e.py  test_tax_brackets_e2e.py  test_vectorized_executor.py
viz/: package-lock.json  package.json
viz/src/: App.css  App.tsx  types.ts
viz/src/components/: AccuracyChart.tsx  CodeViewer.tsx  ConversationView.tsx  ExperimentSummary.tsx  FailureList.tsx  ProvisionCard.tsx
(+28 files in other folders)
