[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rac"
version = "0.1.0"
description = "High-performance DSL for tax and benefit law"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Cosilico", email = "hello@cosilico.ai" }
]
keywords = ["tax", "benefits", "policy", "microsimulation", "rules-engine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "maturin>=1.4,<2.0",
]

[project.urls]
Homepage = "https://cosilico.ai"
Repository = "https://github.com/CosilicoAI/rac"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
module-name = "rac.rac_rust"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
